# ELSL-aws-iot-front-porch-lights

./: .gitmodules  Kconfig  sdkconfig  sdkconfig.old
.git-crypt/keys/default/0/: 9B82847BB875CE688C242F7E0E7D16D48439430B.gpg
main/: CMakeLists.txt  idf_component.yml  main.c
main/certs/original/: AmazonRootCA1.pem  front_porch_lights-certificate.pem.crt  front_porch_lights-private.pem.key  front_porch_lights-public.pem.key
main/certs/src/: AmazonRootCA1_pem.c  certificate.c  front_porch_lights_certificate_pem_crt.c  front_porch_lights_private_pem_key.c  front_porch_lights_public_pem_key.c  private_key.c  root_ca.c
